--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" 
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css/main.css">
     <title>First homework assignment</title>
@@ -13,6 +13,6 @@
     <p>Richard</p>
     <p>Natali</p>
 </body>
-<script src="assets/js/app.js"><</script>
+<script src="assets/js/app.js"></script>
 
 </html>
